# tts-clients

./: .gitignore  CHANGELOG.md  LICENSE  README.md
node/: README.md  package-lock.json  package.json  proto2Typescript.sh  tsconfig.json
node/examples/: file.ts  phoneset.ts  streaming.ts  transcribe.ts  voices.ts
node/src/: index.ts
protos/: TTSServices.proto  TTSTypes.proto
python/: CONTRIBUTING.md  README.md  proto2Python.sh  pyproject.toml
python/examples/: file.py  phoneset.py  streaming.py  transcribe.py  utils.py  voices.py
rust/: Cargo.toml  README.md  build.rs
rust/examples/: file.rs  phoneset.rs  streaming.rs  transcribe.rs  voices.rs
rust/examples/utils/: mod.rs
rust/protos/: TTSServices.proto  TTSTypes.proto
rust/src/: lib.rs
