[package]
name = "aristech-tts-client"
description = "A Rust client library for the Aristech Text-to-Speech API"
version = "2.2.0"
edition = "2021"
repository = "https://github.com/aristech-de/tts-clients"
keywords = ["text-to-speech", "real-time", "streaming", "client-library"]
homepage = "https://github.com/aristech-de/tts-clients/blob/main/rust/README.md"
authors = ["Martin Mende"]
license = "MIT"
categories = ["api-bindings", "multimedia::audio"]

[dependencies]
tonic = { version = "0.14.6", features = [
  "tls-ring",
  "tls-native-roots",
  "gzip",
] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.18"
tonic-prost = "0.14.6"
prost = "0.14.3"
prost-types = "0.14.3"

[dev-dependencies]
dotenvy = "0.15.7"

[build-dependencies]
tonic-prost-build = "0.14.6"

[[example]]
name = "file"
path = "examples/file.rs"

[[example]]
name = "phoneset"
path = "examples/phoneset.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "transcribe"
path = "examples/transcribe.rs"

[[example]]
name = "voices"
path = "examples/voices.rs"
